# get_ip_serever

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: handler.rs  main.rs  settings.rs
src/config/: server.json
src/doc/: server.json
src/modules/: data.rs  handler.rs  http.rs  implements.rs  mod.rs  server.rs  settings.rs  traits.rs
