[package]
name = "getIpSerever"
version = "0.1.0"
authors = ["dark0ghost <dark0ghostworkmail@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.7.5"
serde_json = "0.3.0"
#features = ["os-poll", "tcp"]


