[package]
name = "get_ip_server"
version = "0.1.0"
authors = ["dark0ghost <dark0ghostworkmail@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"



[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.tokio]
version = "0.3.3"
features = ["full"]
