[package]
name = "get_ip_server"
version = "0.1.0"
authors = ["dark0ghost <dark0ghostworkmail@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.3.3"
features = ["full"]
